fixing bug on mobile

--- a/static/css/graduation_thesis.css
+++ b/static/css/graduation_thesis.css
@@ -37,6 +37,7 @@
     margin: auto;
     height: 100vh;
     overflow: scroll;
+    -webkit-overflow-scrolling: touch;
     scrollbar-width: none;
     font-size: medium;
     text-align: justify;
